# robot_simulator

./: CMakeLists.txt  README.md  package.xml
launch/: bring_model.launch
model/: humanoid.urdf  spawn.sh
rviz/: robot_initial.rviz
