<?xml version="1.0"?>
<package format="2">
  <name>robot_simulator</name>
  <version>0.0.0</version>
  <description>The robot_simulator package</description>

  <maintainer email="tamura-kosei@todo.todo">tamura-kosei</maintainer>
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>

</package>
